arc-script/arc-script-test/compile/src/snapshots/hir@nested-if.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/nested-if.arc
---
fun test() -> i32 {
    let a_i32_0: i32 = 65 in
    let b_i32_0: i32 = 66 in
    let c_i32_0: i32 = 67 in
    let true_bool_0: bool = true in
    let false_bool_0: bool = false in
    if true_bool_0 {
        a_i32_0
    } else {
        if false_bool_0 {
            b_i32_0
        } else {
            c_i32_0
        }
    }
}

