arc-script/arc-script-test/compile/src/snapshots/hir@option.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/option.arc

---
enum Opt {
    Some(i32),
    None
}
fun x_1(): unit {
    unit
}
fun main(): unit {
    let x_0: crate::Opt = enwrap[crate::Opt::Some](3) in
    if is[crate::Opt::Some](x_0) {
        let y_0: i32 = unwrap[crate::Opt::Some](x_0) in
        unit
    } else {
        crate::x_1()
    }
}

