arc-script/arc-script-test/compile/src/snapshots/hir@path.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/path.arc

---
fun main() -> unit {
    let x_0: i32 = 1 in
    let y_0: i32 = x_0 in
    unit
}

