arc-script/arc-script-test/compile/src/snapshots/hir@task-filter.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/task-filter.arc
---
task Filter(p_0: fun(i32) -> bool) (~i32) -> (~i32) {
    on {
        event_0: i32 => {
            if p_0(event_0) {
                emit event_0
            } else {
                unit
            }
        }
    }
}
fun x_0(x_1: i32) -> bool {
    x_1 % 2 == 0
}
fun main(stream0_0: ~i32) -> ~i32 {
    let stream1_0: ~i32 = crate::Filter(crate::x_0)(stream0_0) in
    stream1_0
}

