arc-script/arc-script-test/compile/src/snapshots/hir@task-map.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/task-map.arc
---
task Map(f_0: fun(i32) -> i32) (~i32) -> (~i32) {
    on {
        event_0: i32 => {
            emit f_0(event_0)
        }
    }
}
fun x_0(x_1: i32) -> i32 {
    x_1 + 1
}
fun main(input_0: ~i32) -> ~i32 {
    let output_0: ~i32 = crate::Map(crate::x_0)(input_0) in
    output_0
}

