arc-script/arc-script-test/compile/src/snapshots/hir@task-with-funs.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/task-with-funs.arc
---
task Test(x_0: i32) (~i32) -> (~i32) {
    fun add(y_0: i32) -> i32 {
        let z_0: i32 = x_0 + y_0 in
        z_0
    }
    on {
        event_0: i32 => {
            emit crate::Test::add(event_0)
        }
    }
}

