arc-script/arc-script-test/compile/src/snapshots/hir@task_identity_untagged.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_identity_untagged.arc
---
task Identity() (~i32) -> (~i32) {
    on {
        event_0: i32 => {
            emit event_0
        }
    }
}
fun main(input_0: ~i32) -> ~i32 {
    let output_0: ~i32 = crate::Identity()(input_0) in
    output_0
}

