arc-script/arc-script-test/compile/src/snapshots/mlir@binops.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/binops.arc

---
module @toplevel {
    func @crate_main() -> () {
        %x_0 = constant true
        %x_1 = arc.constant 127 : si8
        %x_2 = arc.constant 32767 : si16
        %x_3 = arc.constant 2147483647 : si32
        %x_4 = arc.constant 9223372036854775807 : si64
        %x_5 = arc.constant 255 : ui8
        %x_6 = arc.constant 65535 : ui16
        %x_7 = arc.constant 4294967295 : ui32
        %x_8 = arc.constant 18446744073709551615 : ui64
        %x_9 = constant 3.4028235e38 : f32
        %x_A = constant 1.7976931348623157e308 : f64
        %x_B = arc.constant 126 : si8
        %x_C = arc.constant 32766 : si16
        %x_D = arc.constant 2147483646 : si32
        %x_E = arc.constant 9223372036854775806 : si64
        %x_F = arc.constant 254 : ui8
        %x_G = arc.constant 65534 : ui16
        %x_H = arc.constant 4294967294 : ui32
        %x_I = arc.constant 18446744073709551614 : ui64
        %x_J = constant 3.4028235e37 : f32
        %x_K = constant 1.7976931348623155e308 : f64
        %x_L = arc.addi %x_1, %x_1 : si8
        %x_M = arc.addi %x_2, %x_2 : si16
        %x_N = arc.addi %x_3, %x_3 : si32
        %x_O = arc.addi %x_4, %x_4 : si64
        %x_P = arc.addi %x_5, %x_5 : ui8
        %x_Q = arc.addi %x_6, %x_6 : ui16
        %x_R = arc.addi %x_7, %x_7 : ui32
        %x_S = arc.addi %x_8, %x_8 : ui64
        %x_T = addf %x_9, %x_9 : f32
        %x_U = addf %x_A, %x_A : f64
        %x_V = arc.subi %x_1, %x_1 : si8
        %x_W = arc.subi %x_2, %x_2 : si16
        %x_X = arc.subi %x_3, %x_3 : si32
        %x_Y = arc.subi %x_4, %x_4 : si64
        %x_Z = arc.subi %x_5, %x_5 : ui8
        %x_a = arc.subi %x_6, %x_6 : ui16
        %x_b = arc.subi %x_7, %x_7 : ui32
        %x_c = arc.subi %x_8, %x_8 : ui64
        %x_d = subf %x_9, %x_9 : f32
        %x_e = subf %x_A, %x_A : f64
        %x_f = arc.muli %x_1, %x_1 : si8
        %x_g = arc.muli %x_2, %x_2 : si16
        %x_h = arc.muli %x_3, %x_3 : si32
        %x_i = arc.muli %x_4, %x_4 : si64
        %x_j = arc.muli %x_5, %x_5 : ui8
        %x_k = arc.muli %x_6, %x_6 : ui16
        %x_l = arc.muli %x_7, %x_7 : ui32
        %x_m = arc.muli %x_8, %x_8 : ui64
        %x_n = mulf %x_9, %x_9 : f32
        %x_o = mulf %x_A, %x_A : f64
        %x_p = arc.divi %x_1, %x_1 : si8
        %x_q = arc.divi %x_2, %x_2 : si16
        %x_r = arc.divi %x_3, %x_3 : si32
        %x_s = arc.divi %x_4, %x_4 : si64
        %x_t = arc.divi %x_5, %x_5 : ui8
        %x_u = arc.divi %x_6, %x_6 : ui16
        %x_v = arc.divi %x_7, %x_7 : ui32
        %x_w = arc.divi %x_8, %x_8 : ui64
        %x_x = divf %x_9, %x_9 : f32
        %x_y = divf %x_A, %x_A : f64
        %x_z = arc.remi %x_1, %x_1 : si8
        %x__0 = arc.remi %x_2, %x_2 : si16
        %x__1 = arc.remi %x_3, %x_3 : si32
        %x__2 = arc.remi %x_4, %x_4 : si64
        %x__3 = arc.remi %x_5, %x_5 : ui8
        %x__4 = arc.remi %x_6, %x_6 : ui16
        %x__5 = arc.remi %x_7, %x_7 : ui32
        %x__6 = arc.remi %x_8, %x_8 : ui64
        %x__7 = remf %x_9, %x_9 : f32
        %x__8 = remf %x_A, %x_A : f64
        %x__9 = arc.cmpi lt, %x_1, %x_1 : si8
        %x__A = arc.cmpi lt, %x_2, %x_2 : si16
        %x__B = arc.cmpi lt, %x_3, %x_3 : si32
        %x__C = arc.cmpi lt, %x_4, %x_4 : si64
        %x__D = arc.cmpi lt, %x_5, %x_5 : ui8
        %x__E = arc.cmpi lt, %x_6, %x_6 : ui16
        %x__F = arc.cmpi lt, %x_7, %x_7 : ui32
        %x__G = arc.cmpi lt, %x_8, %x_8 : ui64
        %x__H = cmpf olt, %x_9, %x_9 : f32
        %x__I = cmpf olt, %x_A, %x_A : f64
        %x__J = arc.cmpi le, %x_1, %x_1 : si8
        %x__K = arc.cmpi le, %x_2, %x_2 : si16
        %x__L = arc.cmpi le, %x_3, %x_3 : si32
        %x__M = arc.cmpi le, %x_4, %x_4 : si64
        %x__N = arc.cmpi le, %x_5, %x_5 : ui8
        %x__O = arc.cmpi le, %x_6, %x_6 : ui16
        %x__P = arc.cmpi le, %x_7, %x_7 : ui32
        %x__Q = arc.cmpi le, %x_8, %x_8 : ui64
        %x__R = cmpf ole, %x_9, %x_9 : f32
        %x__S = cmpf ole, %x_A, %x_A : f64
        %x__T = arc.cmpi gt, %x_1, %x_1 : si8
        %x__U = arc.cmpi gt, %x_2, %x_2 : si16
        %x__V = arc.cmpi gt, %x_3, %x_3 : si32
        %x__W = arc.cmpi gt, %x_4, %x_4 : si64
        %x__X = arc.cmpi gt, %x_5, %x_5 : ui8
        %x__Y = arc.cmpi gt, %x_6, %x_6 : ui16
        %x__Z = arc.cmpi gt, %x_7, %x_7 : ui32
        %x__a = arc.cmpi gt, %x_8, %x_8 : ui64
        %x__b = cmpf ogt, %x_9, %x_9 : f32
        %x__c = cmpf ogt, %x_A, %x_A : f64
        %x__d = arc.cmpi ge, %x_1, %x_1 : si8
        %x__e = arc.cmpi ge, %x_2, %x_2 : si16
        %x__f = arc.cmpi ge, %x_3, %x_3 : si32
        %x__g = arc.cmpi ge, %x_4, %x_4 : si64
        %x__h = arc.cmpi ge, %x_5, %x_5 : ui8
        %x__i = arc.cmpi ge, %x_6, %x_6 : ui16
        %x__j = arc.cmpi ge, %x_7, %x_7 : ui32
        %x__k = arc.cmpi ge, %x_8, %x_8 : ui64
        %x__l = cmpf oge, %x_9, %x_9 : f32
        %x__m = cmpf oge, %x_A, %x_A : f64
        %x__n = cmpi eq, %x_0, %x_0 : i1
        %x__o = arc.cmpi eq, %x_1, %x_1 : si8
        %x__p = arc.cmpi eq, %x_2, %x_2 : si16
        %x__q = arc.cmpi eq, %x_3, %x_3 : si32
        %x__r = arc.cmpi eq, %x_4, %x_4 : si64
        %x__s = arc.cmpi eq, %x_5, %x_5 : ui8
        %x__t = arc.cmpi eq, %x_6, %x_6 : ui16
        %x__u = arc.cmpi eq, %x_7, %x_7 : ui32
        %x__v = arc.cmpi eq, %x_8, %x_8 : ui64
        %x__w = cmpf oeq, %x_9, %x_9 : f32
        %x__x = cmpf oeq, %x_A, %x_A : f64
        %x__y = cmpi ne, %x_0, %x_0 : i1
        %x__z = arc.cmpi ne, %x_1, %x_1 : si8
        %x___0 = arc.cmpi ne, %x_2, %x_2 : si16
        %x___1 = arc.cmpi ne, %x_3, %x_3 : si32
        %x___2 = arc.cmpi ne, %x_4, %x_4 : si64
        %x___3 = arc.cmpi ne, %x_5, %x_5 : ui8
        %x___4 = arc.cmpi ne, %x_6, %x_6 : ui16
        %x___5 = arc.cmpi ne, %x_7, %x_7 : ui32
        %x___6 = arc.cmpi ne, %x_8, %x_8 : ui64
        %x___7 = cmpf one, %x_9, %x_9 : f32
        %x___8 = cmpf one, %x_A, %x_A : f64
        %x___9 = and %x_0, %x_0 : i1
        %x___A = or %x_0, %x_0 : i1
        %x___B = xor %x_0, %x_0 : i1
        %x___C = arc.and %x_1, %x_1 : si8
        %x___D = arc.and %x_2, %x_2 : si16
        %x___E = arc.and %x_3, %x_3 : si32
        %x___F = arc.and %x_4, %x_4 : si64
        %x___G = arc.and %x_5, %x_5 : ui8
        %x___H = arc.and %x_6, %x_6 : ui16
        %x___I = arc.and %x_7, %x_7 : ui32
        %x___J = arc.and %x_8, %x_8 : ui64
        %x___K = arc.or %x_1, %x_1 : si8
        %x___L = arc.or %x_2, %x_2 : si16
        %x___M = arc.or %x_3, %x_3 : si32
        %x___N = arc.or %x_4, %x_4 : si64
        %x___O = arc.or %x_5, %x_5 : ui8
        %x___P = arc.or %x_6, %x_6 : ui16
        %x___Q = arc.or %x_7, %x_7 : ui32
        %x___R = arc.or %x_8, %x_8 : ui64
        %x___S = arc.xor %x_1, %x_1 : si8
        %x___T = arc.xor %x_2, %x_2 : si16
        %x___U = arc.xor %x_3, %x_3 : si32
        %x___V = arc.xor %x_4, %x_4 : si64
        %x___W = arc.xor %x_5, %x_5 : ui8
        %x___X = arc.xor %x_6, %x_6 : ui16
        %x___Y = arc.xor %x_7, %x_7 : ui32
        %x___Z = arc.xor %x_8, %x_8 : ui64
        %x___a = math.powf %x_9, %x_J : f32
        %x___b = math.powf %x_A, %x_K : f64
        return 
    }
}

